--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
-    "test": "echo \\\"Error: no tests specified\\\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "author": "Roger Hägerbaum",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "jest": "^29.7.0",
     "marked": "^5.0.2",
     "node-fetch": "^3.3.1",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   }
